@@ -30,7 +30,7 @@ setup(
     version='0.4',
     url='http://packages.python.org/sphinxcontrib-mscgen/',
     download_url='http://pypi.python.org/pypi/sphinxcontrib-mscgen',
-    license='BSD',
+    license='BOLA',
     author='Leandro Lucarella',
     author_email='llucax@gmail.com',
     description='mscgen Sphinx extension',
@@ -41,7 +41,7 @@ setup(
         'Environment :: Console',
         'Environment :: Web Environment',
         'Intended Audience :: Developers',
-        'License :: OSI Approved :: BSD License',
+        'License :: Public Domain',
         'Operating System :: OS Independent',
         'Programming Language :: Python',
         'Topic :: Documentation',
